fix search bar and settings wrapping on mobile. Filepath displayed above album-art

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -109,6 +109,11 @@ body {
     float: right;
     margin: 8px 8px 8px 0;
     padding: 0;
+    white-space: nowrap;
+}
+
+.settings-btn {
+    max-width: 36px;
 }
 
 .default-art {
